<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#BA8BC34A"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginBottom="2dp">


    <TextView
        android:id="@+id/textViewRecyclerNombreUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_ubicacion"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/descripcionSensorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionListView"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/textViewRecyclerDescripcionUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="Modificar" />

</LinearLayout>